get StoragePool integration

--- a/messages.properties
+++ b/messages.properties
@@ -3,4 +3,5 @@ ERR_CreateCommandDevice=Failed to create command device
 ERR_GET_SUPPORT_LOGS=Failed to get support logs.
 ERR_OPERATION_HOSTGROUP=Error occurred during Hostgroup operation
 ERR_OPERATION_LUN=Error occurred during Logical Unit operation
+ERR_CREATE_DYNAMICPOOL=Error occurred while creating the dynamic pool.
 
